Починил создание контейнера

--- a/application.conf
+++ b/application.conf
@@ -1,6 +1,7 @@
-host = "localhost"
+host = "0.0.0.0"
 port = 8080
 server = "http4s"
 
 # session-timeout = "0" means endless cookie
-session-timeout = "0"
+# example: "10 seconds", "5 hours", "30 minutes"
+session-timeout = "30 minutes"
