--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,7 @@ jobs:
       - name: build-master-container-step
         uses: docker/build-push-action@v1.1.0
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
           repository: docker.pkg.github.com/denisnovac/messenger
+          repo-token: ${{ secrets.DOCKER_TOKEN }}
           tag_with_ref: true
           tag_with_sha: true
