--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,19 @@ jobs:
       - name: Assembly 
         run: sbt 'set test in assembly := {}' assembly
 
-      - name: Docker Login
-        uses: azure/docker-login@v1
-        with:
-          login-server: docker.pkg.github.com
-          username: $GITHUB_ACTOR
-          password: ${{ secrets.GITHUB_TOKEN }}
+      #- name: Docker Login
+      #  uses: azure/docker-login@v1
+      #  with:
+      #     login-server: docker.pkg.github.com
+      #     username: $GITHUB_ACTOR
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+          
 
       - name: build-master-container-step
         uses: docker/build-push-action@v1.1.0
         with:
           repository: docker.pkg.github.com/denisnovac/messenger
+          username: $GITHUB_ACTOR
+          password: ${{ secrets.GITHUB_TOKEN }}
           tag_with_ref: true
           tag_with_sha: true
