--- a/application.conf
+++ b/application.conf
@@ -5,3 +5,11 @@ server = "http4s"
 # session-timeout = "0" means endless cookie
 # example: "10 seconds", "5 hours", "30 minutes"
 session-timeout = "30 minutes"
+
+db {
+    host = "localhost"
+    port = 5432
+    name = "messenger"
+    user = "msg"
+    password = "msg_passwd"
+}
